<resources>
    <string name="app_name">Eventive</string>

    <string name="saveV">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="back"></string>
    <string name="spinner">Category</string>
    <string name="spinner2">Category</string>

    <string name="banner4">Event List</string>

    <string name="splashView"> WELCOME TO EVENTIVE</string>


    <string name="category_drop_down">Choose a category</string>
    <string name="budDetails">Budget Details</string>
    <string name="addBudget">Add Budget</string>
    <string name="nameV"></string>
    <string name="estimatedAmount" />
    <string name="paidAmount" />
    <string name="balance" />
    <string name="savev"></string>
    <string name="btnNewTask">New Task</string>
    <string name="btnDeleteTask">Clear Tasks</string>

    <string name="splashImg"></string>

    <string name="upimg"></string>
    <string name="budget"></string>
    <string name="event"></string>
    <string name="shopping"></string>
    <string name="guests"></string>

    <string name="budList">BUDGET LIST</string>
    <string name="rviewv"></string>
    <string name="addv"></string>


    <string name="txtViewFName">First Name</string>
    <string name="txtViewLName">Last Name</string>
    <string name="noOfPeople">No of Guests</string>
    <string name="txtGaddress">Address</string>
    <string name="mobNo">Mobile Number</string>
    <string name="email">e- mail</string>
    <string name="confirm">Confirm Participation</string>
    <string name="btnSave">Save</string>
    <string name="Guest_Login">Guest Login</string>
    <string name="guestLogin">Guest Login</string>
    <string name="show_guests">Guests</string>
    <string name="BtnUpdateO">Update Guests</string>
    <string name="BtnDeleteO">Delete Guest</string>
    <string name="viewGuestsO">View Guest</string>
    <string name="Guests" />
    <string name="guest">guest</string>

    <string-array name="category_arrays">
        <item>Accessories</item>
        <item>Accommodation</item>
        <item>Attire and accessories</item>
        <item>Flower and decor</item>
        <item>Miscellaneous</item>
        <item>Music and show</item>
        <item>Photo and video</item>
        <item>Transportation</item>
    </string-array>
    <string name="one">Name</string>
    <string name="two">Date</string>
    <string name="three">location</string>
    <string name="four">note</string>
    <string name="button">Save</string>
    <string name="five">locate</string>
    <string name="btncalander">bcal</string>


    <string name="editBudDetails">Edit Details</string>
    <string name="nameVedit"></string>
    <string name="estimatedAmountedit"></string>
    <string name="paidAmountedit"></string>
    <string name="balanceedit"></string>
    <string name="savevedit">SAVE</string>
    <string name="swipe">Swipe To Delete!!!</string>
    <string name="update">UPDATE</string>
    <string name="editbutton">Update</string>


</resources>
